Prevent shoulder cards from stretching in desktop grid

--- a/src/pages/SharedPages.module.css
+++ b/src/pages/SharedPages.module.css
@@ -772,11 +772,16 @@
 @media (min-width: 1025px) {
   .knobologyGrid.shoulderUltrasoundGrid {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+    align-items: start;
   }
 
   .shoulderProtocolCard + .shoulderProtocolCard {
     padding-top: 0;
     border-top: 0;
+  }
+
+  .shoulderProtocolCard {
+    align-self: start;
   }
 
   .shoulderProtocolCard:nth-child(n + 3) {
